--- a/src/scss/variables/theme.scss
+++ b/src/scss/variables/theme.scss
@@ -71,7 +71,6 @@ body .excalidraw {
 	--scrollbar-thumb-bg:                var(--ui1);
 
 	--tab-text-color-focused-active:     var(--tx1);
-	--tab-container-background:          var(--bg2);
 	--tab-outline-color:                 var(--ui1);
 
 	--text-accent-hover:                 var(--ax2);
@@ -100,6 +99,10 @@ body .excalidraw {
 	--tag-bg:                            transparent;
 	--tag-bg2:                           transparent;
 
+}
+
+.theme-light.minimal-light-contrast .theme-dark {
+	--tab-container-background:          var(--bg2);
 }
 
 .theme-light,
